# STD-Cringe

./: .clang-format  CMakeLists.txt  Dockerfile  conanfile.txt
docs/: test.txt
include/commands/chat/: analytics_command.h  challenge_command.h  chat_command.h  confession_command.h  conspiracy_command.h  dm_command.h  impersonate_command.h  jinx_command.h  memory_command.h  mimic_command.h  mock_command.h  ping_command.h  story_command.h
include/commands/test/: sync_command.h  test_command.h  test_embed.h
include/commands/voice/: music_player.h  mute_command.h  queue_command.h  say_command.h  shuffle_command.h
include/utils/audio/: audio_player.h  audio_processing.h  cringe_audio.h  cringe_ffmpeg.h  cringe_queue.h  cringe_song.h  cringe_youtube.h  player.h  queue.h  track.h  ytdlp.h
include/utils/bot/: cringe_bot.h
include/utils/database/: challenge_store.h  chat_store.h  confession_store.h  conspiracy_store.h  cringe_database.h  embed_store.h  message_store.h  queue_store.h  rage_store.h  story_store.h  user_store.h
include/utils/embed/: challenge_embed.h  cringe_embed.h
include/utils/http/: cringe_ollama.h  cringe_openai.h
include/utils/listeners/: command_handler.h
include/utils/logger/: logger.h
include/utils/misc/: cringe_async.h  cringe_color.h  cringe_emoji.h  cringe_environment.h  cringe_pipe.h  cringe_thread_pool.h
src/: main.cpp
src/commands/api/: reddit_command.cpp
src/commands/chat/: analytics_command.cpp  challenge_command.cpp  chat_command.cpp  code_command.cpp  confession_command.cpp  conspiracy_command.cpp  describe_command.cpp  dm_command.cpp  imagine_command.cpp  impersonate_command.cpp  info_command.cpp  jinx_command.cpp  memory_command.cpp  mimic_command.cpp  mock_command.cpp  ping_command.cpp  story_command.cpp  user_command.cpp
src/commands/test/: sync_command.cpp  test_command.cpp  test_embed.cpp
src/commands/voice/: join_command.cpp  music_player.cpp  mute_command.cpp  play_command.cpp  queue_command.cpp  say_command.cpp  shuffle_command.cpp  skip_command.cpp
src/utils/audio/: audio_player.cpp  audio_proccessing.cpp  cringe_audio.cpp  cringe_ffmpeg.cpp  cringe_queue.cpp  cringe_song.cpp  cringe_yt.cpp  player.cpp  queue.cpp  track.cpp  ytdlp.cpp
src/utils/bot/: cringe_bot.cpp
src/utils/database/: challenge_store.cpp  chat_store.cpp  confession_store.cpp  conspiracy_store.cpp  cringe_database.cpp  embed_store.cpp  message_store.cpp  queue_store.cpp  rage_store.cpp  story_store.cpp
src/utils/embed/: challenge_embed.cpp  cringe_embed.cpp
src/utils/http/: cringe_ollama.cpp  cringe_openai.cpp
src/utils/listeners/: command_handler.cpp  cringe_logger.cpp  cringe_slashcommand.cpp
src/utils/logger/: logger.cpp
src/utils/misc/: cringe_environment.cpp  cringe_pipe.cpp
